--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 3.31)
 project(yandy_arm)
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+add_compile_definitions(YANDY_CONFIG_PATH="${PROJECT_SOURCE_DIR}/config/")
 
 include(FindModules)
-
-add_executable(yandy_arm main.cpp)
+add_subdirectory(src)
