--- a/config/joint.toml
+++ b/config/joint.toml
@@ -1,49 +1,33 @@
-[[joint]]
-id = 1
-name = "joint_1"
-zero_position = 0.0
-position_limits = { lower = -2.96705972839, upper = 2.96705972839 } # ≈ ±170°
+[joint_1]
+can_id = 0x01
+master_id = 0x11
+offset = 0.0
+dir = -1.0
 mit_pid = { kp = 200.0, ki = 0.12, kd = 6.0 }
-max_velocity = 3.0
 
-[[joint]]
-id = 2
-name = "joint_2"
-zero_position = 0.0
-position_limits = { lower = -1.57079632679, upper = 1.57079632679 } # ≈ ±90°
+[joint_2]
+can_id = 0x02
+master_id = 0x12
+offset = 0.0
+dir = -1.0
 mit_pid = { kp = 200.0, ki = 0.12, kd = 6.0 }
-max_velocity = 2.5
 
-[[joint]]
-id = 3
-name = "joint_3"
-zero_position = 0.0
-position_limits = { lower = -2.09439510239, upper = 2.09439510239 } # ≈ ±120°
+[joint_3]
+can_id = 0x03
+master_id = 0x13
+offset = 0.0
+dir = -1.0
 mit_pid = { kp = 200.0, ki = 0.12, kd = 6.0 }
-max_velocity = 3.0
 
-[[joint]]
-id = 4
-name = "joint_4"
-zero_position = 0.0
-position_limits = { lower = -3.14159265359, upper = 3.14159265359 } # full rotation allowed
+[joint_4]
+offset = 0.0
+dir = 1.0
 position_pid = { kp = 120.0, ki = 0.05, kd = 3.0 }
 velocity_pid = { kp = 0.9, ki = 0.005, kd = 0.0 }
-max_velocity = 4.0
 
-[[joint]]
-id = 5
-name = "joint_5"
-zero_position = 0.0
-position_limits = { lower = -2.09439510239, upper = 2.09439510239 } # ≈ ±120°
+[joint_5]
+can_id = 0x05
+master_id = 0x15
+offset = 0.0
+dir = 1.0
 mit_pid = { kp = 200.0, ki = 0.12, kd = 6.0 }
-max_velocity = 3.5
-
-[[joint]]
-id = 6
-name = "joint_6"
-zero_position = 0.0
-position_limits = { lower = -3.14159265359, upper = 3.14159265359 } # full rotation allowed
-position_pid = { kp = 80.0, ki = 0.01, kd = 1.0 }
-velocity_pid = { kp = 0.7, ki = 0.001, kd = 0.0 }
-max_velocity = 5.0
