--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(yandy_arm)
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+option(YANDY_BUILD_EXAMPLES "" OFF)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -12,3 +13,7 @@ add_compile_definitions(YANDY_CONFIG_PATH="${PROJECT_SOURCE_DIR}/config/")
 
 include(FindModules)
 add_subdirectory(src)
+
+if (YANDY_BUILD_EXAMPLES)
+    add_subdirectory(example)
+endif ()
