add DynamicsSolver and example program

--- a/example/simulate/CMakeLists.txt
+++ b/example/simulate/CMakeLists.txt
@@ -8,11 +8,12 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(rerun_sdk)
 
-find_package(SDL2 REQUIRED)
+find_package(Curses REQUIRED)
 
 target_link_libraries(yandy_simulate PUBLIC
-        SDL2
+        ${CURSES_LIBRARIES}
         rerun_sdk
         yandy_arm_arm_hw
         yandy_arm_solver
 )
+target_include_directories(yandy_simulate PUBLIC ${CURSES_INCLUDE_DIRS})
