add basic vision code

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,1 +1,10 @@
+include(FetchContent)
+FetchContent_Declare(
+        rerun_sdk
+        URL https://github.com/rerun-io/rerun/releases/latest/download/rerun_cpp_sdk.zip
+)
+
+FetchContent_MakeAvailable(rerun_sdk)
+
 add_subdirectory(simulate)
+add_subdirectory(vision)
