add camera visualization and packet structure for energy unit detection

--- a/example/vision/CMakeLists.txt
+++ b/example/vision/CMakeLists.txt
@@ -1,6 +1,5 @@
-add_executable(yandy_vision_example main.cpp)
-target_link_libraries(yandy_vision_example
+add_executable(yandy_vision_example_cv main_cv.cpp)
+target_link_libraries(yandy_vision_example_cv
         PUBLIC
         yandy_arm_vision_system
-        rerun_sdk
 )
