impl UdpInputProvider and InputProvider example

--- a/example/vision/CMakeLists.txt
+++ b/example/vision/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(yandy_vision_example_cv main_cv.cpp)
-target_link_libraries(yandy_vision_example_cv
+add_executable(yandy_example_vision_cv main_cv.cpp)
+target_link_libraries(yandy_example_vision_cv
         PUBLIC
         yandy_arm_vision_system
 )
