fixed puml and tested in example/fsm

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -9,3 +9,4 @@ FetchContent_MakeAvailable(rerun_sdk)
 add_subdirectory(simulate)
 add_subdirectory(vision)
 add_subdirectory(input)
+add_subdirectory(fsm)
