add video processing executable and update CMake configuration; fix include paths

--- a/example/vision/CMakeLists.txt
+++ b/example/vision/CMakeLists.txt
@@ -3,3 +3,9 @@ target_link_libraries(yandy_example_vision_cv
         PUBLIC
         yandy_arm_vision_system
 )
+
+add_executable(yandy_example_vision_video main_video.cpp)
+target_link_libraries(yandy_example_vision_video
+        PUBLIC
+        yandy_arm_vision_system
+)
