--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(yandy_arm_types INTERFACE)
 target_include_directories(yandy_arm_types INTERFACE ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(yandy_arm_types INTERFACE rpl::rpl)
+target_compile_options(yandy_arm_types INTERFACE -Wno-interference-size)
 
 add_library(yandy_arm_logger SHARED core/Logger.cpp)
 target_include_directories(yandy_arm_logger PUBLIC ${PROJECT_SOURCE_DIR}/include)
